--- a/calculator-update 4.html
+++ b/calculator-update 4.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>10i Calculator Update 4</title>
-  <link rel="stylesheet" href="styles/lesson-10i.css">
+  <link rel="stylesheet" href="10i.css">
 </head>
 <body>
 
@@ -59,6 +59,6 @@
       console.log(calculation);
     ">Clear results</button>-->
   </p>
-  <script src="scripts/exercise-10i.js"></script>
+  <script src="10i.js"></script>
 </body>
 </html>
